fix content alignment

--- a/layout/_main.scss
+++ b/layout/_main.scss
@@ -78,7 +78,7 @@ a.title:visited:hover {
 }
 
 body div.content {
-  margin: 10px 320px 0 5px !important;
+  margin: 10px 350px 0 5px !important;
   padding: 20px 0 0 !important;
 }
 
